--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
     // dagger2
-    compile rootProject.ext.dependencies.dagger
-    apt rootProject.ext.dependencies.dagger_compiler
-    provided rootProject.ext.dependencies.javax_annotation
+    final DAGGER_VERSION = '2.4'
+    compile "com.google.dagger:dagger:$DAGGER_VERSION"// Dagger2
+    apt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"// APT dependencies
+    provided 'org.glassfish:javax.annotation:10.0-b28'// Required by Dagger2
 }
